Fix bug of showing last message, no height control was present

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -581,8 +581,10 @@ video {
       font-size: 15px;
       display: inline-block;
       max-width: 250px;
+      height: 22.5px;
       overflow: hidden;
       text-overflow: ellipsis;
+      white-space: nowrap;
     }
 
     .onlineCircle, .awayCircle {
