--- a/src/styles/sass-compiled-css/sass/main.css
+++ b/src/styles/sass-compiled-css/sass/main.css
@@ -7,7 +7,9 @@
  div, span, object,
 h1,
 .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, p,
-a, code, img, s, strong,
+a, code, img, s,
+small,
+.small, strong,
 b, form, label, details, footer, header,
 time, video {
   margin: 0;
@@ -227,6 +229,10 @@ strong {
   font-weight: bolder;
 }
 
+small, .small {
+  font-size: 0.875em;
+}
+
 a {
   color: rgba(var(--bs-link-color-rgb), var(--bs-link-opacity, 1));
   text-decoration: underline;
@@ -282,6 +288,10 @@ textarea {
 
 button {
   text-transform: none;
+}
+
+[role=button] {
+  cursor: pointer;
 }
 
 [list]:not([type=date]):not([type=datetime-local]):not([type=month]):not([type=week]):not([type=time])::-webkit-calendar-picker-indicator {
@@ -437,6 +447,10 @@ textarea {
     flex: 0 0 auto;
     width: 50%;
   }
+  .col-sm-11 {
+    flex: 0 0 auto;
+    width: 91.66666667%;
+  }
 }
 @media (min-width: 768px) {
   .col-md-6 {
@@ -569,8 +583,16 @@ textarea {
   object-fit: cover !important;
 }
 
+.opacity-50 {
+  opacity: 0.5 !important;
+}
+
 .overflow-hidden {
   overflow: hidden !important;
+}
+
+.d-block {
+  display: block !important;
 }
 
 .d-flex {
@@ -836,8 +858,24 @@ textarea {
   padding-bottom: 1.5rem !important;
 }
 
+.pt-2 {
+  padding-top: 0.5rem !important;
+}
+
+.pt-3 {
+  padding-top: 1rem !important;
+}
+
 .pt-5 {
   padding-top: 3rem !important;
+}
+
+.pe-2 {
+  padding-right: 0.5rem !important;
+}
+
+.pe-5 {
+  padding-right: 3rem !important;
 }
 
 .pb-0 {
@@ -848,12 +886,12 @@ textarea {
   padding-left: 0 !important;
 }
 
-.ps-4 {
-  padding-left: 1.5rem !important;
+.ps-2 {
+  padding-left: 0.5rem !important;
 }
 
-.ps-5 {
-  padding-left: 3rem !important;
+.ps-4 {
+  padding-left: 1.5rem !important;
 }
 
 .gap-1 {
@@ -884,7 +922,15 @@ textarea {
   text-align: center !important;
 }
 
+.text-decoration-underline {
+  text-decoration: underline !important;
+}
+
 /* rtl:begin:remove */
+.text-break {
+  word-wrap: break-word !important;
+  word-break: break-word !important;
+}
 
 /* rtl:end:remove */
 .text-primary {
@@ -931,6 +977,12 @@ textarea {
   }
 }
 @media (min-width: 768px) {
+  .flex-md-row {
+    flex-direction: row !important;
+  }
+  .align-items-md-center {
+    align-items: center !important;
+  }
   .mx-md-5 {
     margin-right: 3rem !important;
     margin-left: 3rem !important;
@@ -957,6 +1009,12 @@ textarea {
     padding-right: 3rem !important;
     padding-left: 3rem !important;
   }
+  .ps-md-0 {
+    padding-left: 0 !important;
+  }
+  .gap-md-4 {
+    gap: 1.5rem !important;
+  }
 }
 @media (min-width: 992px) {
   .flex-lg-row {
@@ -968,14 +1026,28 @@ textarea {
   .mb-lg-0 {
     margin-bottom: 0 !important;
   }
+  .ms-lg-5 {
+    margin-left: 3rem !important;
+  }
   .pt-lg-5 {
     padding-top: 3rem !important;
+  }
+  .pe-lg-0 {
+    padding-right: 0 !important;
+  }
+  .ps-lg-0 {
+    padding-left: 0 !important;
   }
   .gap-lg-5 {
     gap: 3rem !important;
   }
   .text-lg-start {
     text-align: left !important;
+  }
+}
+@media (min-width: 1200px) {
+  .ms-xl-5 {
+    margin-left: 3rem !important;
   }
 }
 @media (min-width: 1200px) {
@@ -1260,8 +1332,11 @@ video {
 }
 .homepage-logged-in .action-button, .profile-page .action-button, .friends .action-button {
   background-color: transparent;
-  border: 1px solid #6B1E7B !important;
+  border: 1px solid #6B1E7B;
   transition: 0.1s;
+}
+.homepage-logged-in .action-button:disabled, .profile-page .action-button:disabled, .friends .action-button:disabled {
+  pointer-events: none;
 }
 .homepage-logged-in .action-button .action-button-icon, .profile-page .action-button .action-button-icon, .friends .action-button .action-button-icon {
   width: 20px;
@@ -1276,6 +1351,42 @@ video {
 }
 .homepage-logged-in .action-button:hover .action-button-icon, .profile-page .action-button:hover .action-button-icon, .friends .action-button:hover .action-button-icon {
   color: #fff;
+}
+
+.post-button {
+  background-color: transparent;
+  border: 1px solid #FF4081 !important;
+  transition: 0.1s;
+}
+.post-button .post-button-icon {
+  width: 20px;
+  height: 20px;
+  color: rgba(255, 64, 129, 0.6);
+  transition: 0.1s;
+}
+.post-button:hover {
+  background-color: #FF4081;
+  color: #fff;
+  cursor: pointer;
+}
+.post-button:hover .action-button-icon {
+  color: #fff;
+}
+
+.post-input-button {
+  border: none;
+  outline: none;
+  padding: 6px 0 6px 8px;
+  border-radius: 5px;
+  width: 100%;
+  text-align: left;
+  transition: 0.1s;
+  background-color: #E0E0E0;
+  color: #404040;
+}
+.post-input-button:hover {
+  background-color: #fff;
+  color: black;
 }
 
 .messaging-window {
@@ -1320,8 +1431,7 @@ video {
 .messaging-window .messages-container .sent-message p {
   border-radius: 10px 10px 0 10px;
   font-size: 15px;
-  max-width: 320px;
-  width: fit-content;
+  max-width: 300px;
   text-align: justify;
   overflow-wrap: break-word;
 }
@@ -1331,8 +1441,7 @@ video {
 .messaging-window .messages-container .recieved-message p {
   border-radius: 10px 10px 10px 0;
   font-size: 15px;
-  max-width: 292px;
-  width: fit-content;
+  max-width: 267px;
   text-align: justify;
   overflow-wrap: break-word;
 }
@@ -1372,7 +1481,6 @@ video {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
   height: 250px;
 }
 .home-content-logged-in .picker-container * {
@@ -1380,13 +1488,16 @@ video {
 }
 .home-content-logged-in .loggedin-friends {
   z-index: 900;
+  background-color: #6082B6;
 }
 .home-content-logged-in .loggedin-friends .last-message {
   font-size: 15px;
   display: inline-block;
-  max-width: 250px;
+  max-width: 200px;
+  height: 22.5px;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .home-content-logged-in .loggedin-friends .onlineCircle, .home-content-logged-in .loggedin-friends .awayCircle {
   width: 8px;
@@ -1471,6 +1582,22 @@ video {
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.6);
+}
+
+.textarea-for-post {
+  width: 600px;
+  height: 300px;
+  resize: none;
+  border-radius: 5px;
+  padding: 4px 4px 0 8px;
+}
+
+.extension {
+  transition: 0.1s;
+  color: #E0E0E0;
+}
+.extension:hover {
+  color: #fff;
 }
 
 .roller-wrapper {
