--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -81,22 +81,22 @@ html {
   cursor: pointer !important;
 }
 
-video {
-  filter: brightness(40%);
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -99;
-}
-
 .video-container {
   width: 100%;
   position: relative;
   overflow: hidden;
   min-height: 100vh !important;
+
+  video {
+    filter: brightness(40%);
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -99;
+  }
 }
 
 .navbar-wrapper {
@@ -791,6 +791,11 @@ video {
   }
 }
 
+.post-button-activated {
+  background-color: $tertiary-second;
+  color: $secondary;
+  fill: $secondary;
+}
 
 
 
