Add caching for posts and post comments, (NEEDS COMMENTS)

--- a/src/styles/sass-compiled-css/sass/main.css
+++ b/src/styles/sass-compiled-css/sass/main.css
@@ -608,6 +608,10 @@ textarea {
   opacity: 0.5 !important;
 }
 
+.opacity-75 {
+  opacity: 0.75 !important;
+}
+
 .overflow-hidden {
   overflow: hidden !important;
 }
