--- a/src/styles/sass-compiled-css/sass/main.css
+++ b/src/styles/sass-compiled-css/sass/main.css
@@ -1503,7 +1503,7 @@ textarea {
   width: 100%;
 }
 .messaging-window .messages-container .sent-message p {
-  border-radius: 10px 10px 0 10px;
+  border-radius: 10px;
   font-size: 15px;
   max-width: 300px;
   text-align: justify;
@@ -1513,7 +1513,7 @@ textarea {
   width: 100%;
 }
 .messaging-window .messages-container .recieved-message p {
-  border-radius: 10px 10px 10px 0;
+  border-radius: 10px;
   font-size: 15px;
   max-width: 267px;
   text-align: justify;
