--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -549,7 +549,7 @@ html {
     .sent-message {
       width: 100%;
       p {
-        border-radius: 10px 10px 0 10px;
+        border-radius: 10px;
         font-size: 15px;
         max-width: 300px;
         text-align: justify;
@@ -560,7 +560,7 @@ html {
     .recieved-message {
       width: 100%;
       p {
-        border-radius: 10px 10px 10px 0;
+        border-radius: 10px;
         font-size: 15px;
         max-width: 267px;
         text-align: justify;
